# DB_Bookings

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: Booking_Update.py  Bookings.py  calculador_occ.py  example.db  main.py
src/API_Data/: bookings_description.py  get.py  get_bookings_description.py  get_bookings_id.py  request_api.py  transform.py
src/API_Data/Get/: bookings_description.py  get_bookings_description.py  get_bookings_id.py  get_bookings_list.py  request.py  request_api.py
src/Database/: commit_to_db.py  database.py  models.py
src/Logs/: send_email.py
